--- a/index.html
+++ b/index.html
@@ -1,81 +1,186 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wood Jiggery - Handcrafted Woodwork</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>WoodJiggery | Custom woodworking, jigs & small-batch creations</title>
+  <meta name="description" content="Custom woodworking and small-batch creations: boards, boxes, candle holders, mallets, shelving, laser engraving, CNC, and commissions." />
+
+  <link rel="stylesheet" href="assets/css/site.css" />
 </head>
+
 <body>
-
-    <header>
-        <div class="logo">
-            <a href="index.html">
-                <img src="images/Woodjiggerygray.svg" alt="Wood Jiggery Logo">
-            </a>
+  <header class="topbar">
+    <div class="wrap topbar-inner">
+      <a class="brand" href="index.html" aria-label="WoodJiggery home">
+        <!-- Swap this path to your real logo if you have one -->
+        <div class="logo" aria-hidden="true">
+  <img src="images/woodjiggeryblack.svg" alt="" class="logo-img">
+</div>
+        <div class="brand-text">
+          <div class="brand-name">WoodJiggery</div>
+          <div class="brand-sub">Custom woodworking • Small-batch builds • Commissions</div>
         </div>
-        <nav>
-            <button class="menu-toggle" type="button" aria-expanded="false" aria-controls="site-nav" aria-label="Toggle navigation menu">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-            <ul id="site-nav">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="Creations.html">Creations</a></li>
-                <li><a href="About.html">About</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+      </a>
 
-    <main>
-        <div class="container" style="text-align: center; padding-bottom: 1rem;">
-            <h1>Wood Jiggery</h1>
+      <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="siteNav">
+        <span class="sr-only">Toggle menu</span>
+        <span class="bar"></span><span class="bar"></span><span class="bar"></span>
+      </button>
+
+      <nav id="siteNav" class="nav" aria-label="Primary">
+        <a href="Creations.html">Creations</a>
+        <a href="About.html">About</a>
+        <a href="Contact.html">Contact</a>
+        <a class="btn primary" href="Contact.html">Request a quote</a>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <!-- HERO -->
+    <section class="hero">
+      <div class="wrap hero-inner">
+        <div class="hero-copy">
+          <h1>Beautiful, durable pieces — made to be used.</h1>
+          <p class="lead">
+            Cutting/charcuterie boards, keepsake boxes, candle holders, mallets, shelving,
+            outdoor furniture, laser engraving, CNC work, and custom commissions.
+          </p>
+
+          <div class="pill-row" aria-label="Product categories">
+            <span class="pill">Boards</span>
+            <span class="pill">Boxes</span>
+            <span class="pill">Candle holders</span>
+            <span class="pill">Mallets</span>
+            <span class="pill">Shelving</span>
+            <span class="pill">Engraving</span>
+            <span class="pill">CNC</span>
+            <span class="pill">Commissions</span>
+          </div>
+
+          <div class="hero-actions">
+            <a class="btn primary" href="Creations.html">See creations</a>
+            <a class="btn" href="Contact.html">Contact</a>
+          </div>
+
+          <div class="trust">
+            <div class="trust-item"><span class="dot"></span> Handmade in the USA</div>
+            <div class="trust-item"><span class="dot"></span> Food-safe finishes (when applicable)</div>
+            <div class="trust-item"><span class="dot"></span> Custom sizing + woods available</div>
+          </div>
         </div>
 
-        <section class="container offerings" aria-labelledby="offerings-title">
-            <p class="offerings-eyebrow">What We Build</p>
-            <h2 id="offerings-title">Crafted for Daily Use, Designed to Last</h2>
-            <p class="offerings-intro">From giftable keepsakes to one-of-a-kind furniture, we offer custom woodwork and precision detailing for homes, businesses, and meaningful occasions.</p>
-            <ul class="offerings-pills">
-                <li>Cutting/charcuterie boards</li>
-                <li>Keepsake/jewelry boxes</li>
-                <li>Candle holders &amp; small décor</li>
-                <li>Wood mallets</li>
-                <li>Shelving &amp; storage solutions</li>
-                <li>Outdoor furniture</li>
-                <li>Laser engraving</li>
-                <li>CNC projects</li>
-                <li>Custom commissions</li>
-            </ul>
-        </section>
+        <div class="hero-media" aria-label="Featured images">
+          <!-- Replace these image paths with your own (or remove if you want text-only hero) -->
+          <a class="shot" href="assets/img/featured-1.jpg" data-lightbox>
+            <img src="assets/img/featured-1.jpg" alt="Featured woodworking piece" loading="lazy">
+          </a>
+          <a class="shot" href="assets/img/featured-2.jpg" data-lightbox>
+            <img src="assets/img/featured-2.jpg" alt="Featured woodworking piece" loading="lazy">
+          </a>
+          <a class="shot wide" href="assets/img/featured-3.jpg" data-lightbox>
+            <img src="assets/img/featured-3.jpg" alt="Featured woodworking piece" loading="lazy">
+          </a>
+        </div>
+      </div>
+    </section>
 
-        <div class="hero-grid">
-            <div class="grid-item">
-                <img src="images/CandleHolder01.png" alt="Candle Holder">
-                <div class="grid-overlay">Candle Holders</div>
-            </div>
-            <div class="grid-item">
-                <img src="images/CandleHoldersmall-sm.png" alt="Small Candle Holder">
-                <div class="grid-overlay">Home Decor</div>
-            </div>
-            <div class="grid-item">
-                <img src="images/Trivet1.jpg" alt="Wooden Trivet">
-                <div class="grid-overlay">Kitchenware</div>
-            </div>
+    <!-- FEATURED CATEGORIES -->
+    <section class="section">
+      <div class="wrap">
+        <div class="section-head">
+          <h2>What we make</h2>
+          <p class="muted">A few common requests — plus one-offs and weird ideas (the fun ones).</p>
         </div>
 
-        <div class="container" style="text-align: center; padding-top: 2rem;">
-            <a href="Creations.html" style="display: inline-block; padding: 1rem 2rem; border: 1px solid #333; text-transform: uppercase; letter-spacing: 1px; font-weight: 500;">View All Creations</a>
+        <div class="grid cards">
+          <article class="card">
+            <h3>Boards</h3>
+            <p>Cutting, charcuterie, and serving boards — classic or wild grain.</p>
+            <a class="text-link" href="Creations.html">Browse →</a>
+          </article>
+
+          <article class="card">
+            <h3>Keepsake boxes</h3>
+            <p>Jewelry and keepsake boxes with clean joinery and premium feel.</p>
+            <a class="text-link" href="Creations.html">Browse →</a>
+          </article>
+
+          <article class="card">
+            <h3>Home décor</h3>
+            <p>Candle holders and small décor made from interesting woods.</p>
+            <a class="text-link" href="Creations.html">Browse →</a>
+          </article>
+
+          <article class="card">
+            <h3>Custom + CNC</h3>
+            <p>Laser engraving, CNC work, and custom commissions.</p>
+            <a class="text-link" href="Contact.html">Ask →</a>
+          </article>
         </div>
-    </main>
+      </div>
+    </section>
 
-    <footer>
-        <p>&copy; 2026 Wood Jiggery. All rights reserved.</p>
-    </footer>
+    <!-- FEATURED CREATIONS (simple gallery) -->
+    <section class="section">
+      <div class="wrap">
+        <div class="section-head">
+          <h2>Featured</h2>
+          <p class="muted">A rotating set — we’ll swap these as you add new photos.</p>
+        </div>
 
-    <script src="app.js" defer></script>
+        <div class="gallery">
+          <!-- Replace with your real images -->
+          <a class="g" href="assets/img/gallery-1.jpg" data-lightbox><img src="assets/img/gallery-1.jpg" alt="Creation photo" loading="lazy"></a>
+          <a class="g" href="assets/img/gallery-2.jpg" data-lightbox><img src="assets/img/gallery-2.jpg" alt="Creation photo" loading="lazy"></a>
+          <a class="g" href="assets/img/gallery-3.jpg" data-lightbox><img src="assets/img/gallery-3.jpg" alt="Creation photo" loading="lazy"></a>
+          <a class="g" href="assets/img/gallery-4.jpg" data-lightbox><img src="assets/img/gallery-4.jpg" alt="Creation photo" loading="lazy"></a>
+          <a class="g" href="assets/img/gallery-5.jpg" data-lightbox><img src="assets/img/gallery-5.jpg" alt="Creation photo" loading="lazy"></a>
+          <a class="g" href="assets/img/gallery-6.jpg" data-lightbox><img src="assets/img/gallery-6.jpg" alt="Creation photo" loading="lazy"></a>
+        </div>
+
+        <div style="margin-top:14px;">
+          <a class="btn" href="Creations.html">More products</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- CTA -->
+    <section class="cta">
+      <div class="wrap cta-inner">
+        <div>
+          <h2>Have something specific in mind?</h2>
+          <p class="muted">Send a quick note with size, wood preference, and timeline — we’ll reply with options.</p>
+        </div>
+        <div class="cta-actions">
+          <a class="btn primary" href="Contact.html">Request a quote</a>
+          <a class="btn" href="About.html">About WoodJiggery</a>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="wrap footer-inner">
+      <div>
+        <div class="footer-title">WoodJiggery</div>
+        <div class="muted">Custom woodworking • Small-batch creations • Commissions</div>
+      </div>
+
+      <div class="footer-links">
+        <a href="Creations.html">Creations</a>
+        <a href="About.html">About</a>
+        <a href="Contact.html">Contact</a>
+      </div>
+    </div>
+  </footer>
+
+  <div class="lightbox" id="lightbox" aria-hidden="true">
+    <button class="lightbox-close" type="button" aria-label="Close">✕</button>
+    <img class="lightbox-img" alt="" />
+  </div>
+
+  <script src="assets/js/site.js"></script>
 </body>
 </html>
